# LLM

./: pyproject.toml
app/: __init__.py  routes.py
client/: package.json
client/src/: App.tsx  index.css
client/src/components/: ChatInput.tsx  ChatMessage.tsx  FileSelectionModal.tsx
server/: .env.example  .gitignore  __init__.py  file.py  main.py  ollama.py  pyproject.toml  requirements.txt  routes.py  s3.py
