[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["lucas.rimbault <lucas.rimbault@tentelemed.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
boto3 = "^1.35.67"
flask = "^3.1.0"
python-dotenv = "^1.0.1"
pymupdf = "^1.24.14"
ollama = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
